--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
   "name": "kindly-coin",
   "version": "0.1.0",
+  "license": "MIT",
   "scripts": {
     "deploy:mumbai": "npx hardhat run scripts/deploy-mumbai.js --network mumbai",
     "deploy:goerli": "npx hardhat run scripts/deploy-goerli.js --network goerli"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.1.0",
-    "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^2.1.8",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
-    "@openzeppelin/test-helpers": "^0.5.15",
-    "chai": "^4.3.6",
+    "@openzeppelin/contracts": "^4.1.0",
+    "chai": "^4.3.4",
     "chai-bignumber": "^3.0.0",
     "chai-bn": "^0.3.1",
     "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.9",
-    "hardhat": "^2.10.0",
-    "web3": "^1.7.4"
+    "ethers": "^5.4.7",
+    "hardhat": "^2.6.4",
+    "web3": "^1.5.3"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.7.2",
     "dotenv": "^16.0.1"
   }
 }
