--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "deploy:mumbai": "npx hardhat run scripts/deploy-mumbai.js --network mumbai",
-    "deploy:goerli": "npx hardhat run scripts/deploy-goerli.js --network goerli"
+    "deploy:goerli": "npx hardhat run scripts/deploy-goerli.js --network goerli",
+    "test": "npx hardhat test"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
@@ -16,12 +17,13 @@
     "chai-bignumber": "^3.0.0",
     "chai-bn": "^0.3.1",
     "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.4.7",
     "hardhat": "^2.6.4",
     "web3": "^1.5.3"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.7.2",
+    "@maticnetwork/maticjs": "^3.4.0-beta.0",
+    "@maticnetwork/maticjs-web3": "^1.0.1",
+    "@truffle/hdwallet-provider": "^2.0.13",
     "dotenv": "^16.0.1"
   }
 }
