--- a/config.json
+++ b/config.json
@@ -11,6 +11,7 @@
   
   "MATIC_RPC": "https://matic-mumbai.chainstacklabs.com",
   "ETHEREUM_RPC": "https://goerli.infura.io/v3/fce7ed09230548eea542d77c55357baf",
+  "MATIC_URL": "https://polygon-mainnet.g.alchemy.com/v2/Ku1h-WxyEiWgBSO0NET3VSZpVUKhZC7D",
   
   "MATIC_CHAINID": 80001,
   "ETHEREUM_CHAINID": 5,
